# flippingout

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
assets/: car_wip.pdn  wheel_tmp.pdn
src/: main.rs
src/collision_groups/: mod.rs
src/map/: chunk.rs
src/nailgun/: mod.rs  tool.rs
src/player/: camera.rs  car.rs  mod.rs
src/utils/: iter.rs  mod.rs  quat.rs  secondary_handle.rs
wasm/: index.html
