[package]
name = "flippingout"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
bevy_rapier2d = "0.16.1"
bevy_editor_pls = "0.1"

[profile.dev.package."*"]
debug = false
opt-level = 3
debug-assertions = false
overflow-checks = false

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
